# pyFrame3DD

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  environment.yml  meson.build  meson_options.txt  pyLICENSE.txt  pyproject.toml  setup.py
.github/workflows/: CI_pyFrame3DD.yml  Publish_pyFrame3DD.yml
examples/: exB.3dd  exB.py
pyframe3dd/: __init__.py  meson.build  pyframe3dd.py
pyframe3dd/src/: HPGmatrix.c  Makefile  NRutil.c  coordtrans.c  frame3dd.c  frame3dd_io.c  preframe.c  py_HPGmatrix.c  py_frame3dd.c  py_main.c
src/: HPGmatrix.c  HPGmatrix.h  HPGutil.c  HPGutil.h  Makefile  NRutil.c  common.h  eig.c  frame.py  frame3dd  frame3dd.c  frame3dd.h  frame3dd.py  frame3dd_io.c  frame3dd_io.h  frame3ddddd  main.c  py_io.c  py_io.h  py_main.c  py_structs.h  pyframe3dd.c  test.py  test_frame.py
src/pyframe3dd/: HPGmatrix.c  Makefile  __init__.py  eig.c  frame3dd.c  frame3dd.py  main.c  py_HPGmatrix.c  py_io.c  py_io.h  py_main.c  pyframe3dd.c  pyframe3dd.h
test/: test_beam_theory.py  test_breakdown.py  test_frame.py
