py3_target.extension_module('_pyframe3dd',
     'src/py_HPGmatrix.c',
     'src/HPGutil.c',
     'src/NRutil.c',
     'src/coordtrans.c',
     'src/preframe.c',
     'src/py_eig.c',
     'src/py_frame3dd.c',
     'src/py_io.c',
     'src/py_main.c',
     include_directories: 'src',
     dependencies : py3_dep,
     subdir: 'pyframe3dd',
     link_language: 'c',
     install : false)
