#py3_target.extension_module('_pyframe3dd',
#     'src/py_main.c',
#     'src/py_io.c',
#     'src/py_frame3dd.c',
#     'src/py_eig.c',
#     'src/py_HPGmatrix.c',
#     'src/coordtrans.c',
#     'src/HPGutil.c',
#     'src/NRutil.c',
#     include_directories: 'src',
#     include_directories: incdir_numpy,
#     dependencies : py3_dep,
#     subdir: 'pyframe3dd',
#     install : false)
test.shared_library('_pyframe3dd',
     'src/py_main.c',
     'src/py_io.c',
     'src/py_frame3dd.c',
     'src/py_eig.c',
     'src/py_HPGmatrix.c',
     'src/coordtrans.c',
     'src/HPGutil.c',
     'src/NRutil.c',
     include_directories: 'src',
     include_directories: incdir_numpy,
     dependencies : py3_dep,
     subdir: 'pyframe3dd',
     install : true)
